tests/reference/asr-test_binop2-e5749af.stderr
semantic error: Division is not supported for string type
 --> tests/errors/test_binop2.py:6:11
  |
6 |     print(a/b)
  |           ^ ^ string not supported in division
